<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">zxing</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="butn_accept">Accept</string>
    <string name="butn_addDevices">Add devices</string>
    <string name="butn_addShortcut">Add shortcut</string>
    <string name="butn_allow">Allow</string>
    <string name="butn_appLaunch">Launch</string>
    <string name="butn_asApk">As APK</string>
    <string name="butn_asLink">As a link</string>
    <string name="butn_ask">Ask</string>
    <string name="butn_block">Block</string>
    <string name="butn_cancel">Cancel</string>
    <string name="butn_cancelReceiving">Cancel receiving</string>
    <string name="butn_cancelSending">Cancel sending</string>
    <string name="butn_change">Change</string>
    <string name="butn_changeConnection">Change connection</string>
    <string name="butn_changeMode">Change mode</string>
    <string name="butn_changeSavePath">Change save path</string>
    <string name="butn_changelog">Changelog</string>
    <string name="butn_check">Check</string>
    <string name="butn_checkForUpdates">Check for new version</string>
    <string name="butn_choose">Choose</string>
    <string name="butn_clearQueue">Clear the queue</string>
    <string name="butn_close">Close</string>
    <string name="butn_connect">Connect</string>
    <string name="butn_connectionDetails">Connections details</string>
    <string name="butn_connectionList">Connections</string>
    <string name="butn_connectionTest">Connection test</string>
    <string name="butn_copyHere">Copy here</string>
    <string name="butn_copyToClipboard">Copy to clipboard</string>
    <string name="butn_create">Create</string>
    <string name="butn_createFolder">Create folder</string>
    <string name="butn_delete">Delete</string>
    <string name="butn_disconnect">Disconnect</string>
    <string name="butn_donate">Help development</string>
    <string name="butn_done">Done</string>
    <string name="butn_download">Download</string>
    <string name="butn_downloadAllAsZip">Download all as ZIP (single, uncompressed)</string>
    <string name="butn_edit">Edit</string>
    <string name="butn_ejectDirectory">Unmount folder</string>
    <string name="butn_enable">Enable</string>
    <string name="butn_enterIpAddress">Enter IP Address</string>
    <string name="butn_exit">Exit</string>
    <string name="butn_feedbackContact">Feedback &amp; contact</string>
    <string name="butn_fixConnection">Fix connection</string>
    <string name="butn_gotIt">Got it</string>
    <string name="butn_gridSize">Grid size</string>
    <string name="butn_groupBy">Group by</string>
    <string name="butn_help">Help</string>
    <string name="butn_hideOnBrowser">Hide on browser</string>
    <string name="butn_killNow">Kill now</string>
    <string name="butn_locationSettings">Location</string>
    <string name="butn_mountDirectory">Mount folder</string>
    <string name="butn_multiSelect">Multi selection</string>
    <string name="butn_never">Never</string>
    <string name="butn_newFile">New file</string>
    <string name="butn_no">No</string>
    <string name="butn_open">Open</string>
    <string name="butn_pause">Pause</string>
    <string name="butn_previewSelections">Preview selections</string>
    <string name="butn_proceed">Proceed</string>
    <string name="butn_qrScanToSend">Scan QR code to send</string>
    <string name="butn_qrToggle">Toggle QR code visibility</string>
    <string name="butn_queueCounted">Queue (%d)</string>
    <string name="butn_receive">Receive</string>
    <string name="butn_refresh">Refresh</string>
    <string name="butn_reject">Reject</string>
    <string name="butn_remove">Remove</string>
    <string name="butn_removeAll">Remove all</string>
    <string name="butn_removeShortcut">Remove shortcut</string>
    <string name="butn_rename">Rename</string>
    <string name="butn_resetToDefault">Reset to default</string>
    <string name="butn_resume">Resume</string>
    <string name="butn_retry">Retry</string>
    <string name="butn_retryReceiving">Retry receiving</string>
    <string name="butn_revokePin">Revoke PIN</string>
    <string name="butn_save">Save</string>
    <string name="butn_saveAnyway">Save anyway</string>
    <string name="butn_saveTo">Save to</string>
    <string name="butn_scan">Scan</string>
    <string name="butn_scanQrCode">Scan QR Code</string>
    <string name="butn_search">Search</string>
    <string name="butn_seeSourceCode">Contact Us</string>
    <string name="butn_selectAll">Select all</string>
    <string name="butn_selectNone">Select none</string>
    <string name="butn_selectThis">Select this</string>
    <string name="butn_send">@string/text_send</string>
    <string name="butn_setUp">Set up</string>
    <string name="butn_settings">Settings</string>
    <string name="butn_share">Share</string>
    <string name="butn_shareOnBrowser">Share on browser</string>
    <string name="butn_shareTrebleshot">Share this app</string>
    <string name="butn_shareWithOtherApps">Share with other apps</string>
    <string name="butn_shareWithTrebleshot">Share with Speed Share</string>
    <string name="butn_show">Show</string>
    <string name="butn_showAsQrCode">Show as QR code</string>
    <string name="butn_showFiles">Show files</string>
    <string name="butn_showSystemApps">Show system apps</string>
    <string name="butn_singleRow">Single row</string>
    <string name="butn_skip">Skip</string>
    <string name="butn_sortBy">Sort by</string>
    <string name="butn_sortOrder">Sort order</string>
    <string name="butn_start">Start</string>
    <string name="butn_startHotspot">Set up hotspot</string>
    <string name="butn_stop">Stop</string>
    <string name="butn_stopHotspot">Stop hotspot</string>
    <string name="butn_telegram_channel">Telegram channel</string>
    <string name="butn_temp_doIt">Take Survey</string>
    <string name="butn_trustZoneDevice">Set as RelianceZone device</string>
    <string name="butn_turnTrustZoneOff">Turn RelianceZone off</string>
    <string name="butn_turnTrustZoneOn">Turn RelianceZone on</string>
    <string name="butn_webShare">Share via browser</string>
    <string name="conf_packageName">com.genonbeta.TrebleShot</string>
    <string name="const_text_useAppFonts">Apply the recommended font</string>
    <string name="const_text_useAppFontsSummary">Use the supplied custom font</string>
    <string name="jay" />
    <string name="mesg_completing">Completing</string>
    <string name="text_about">About</string>
    <string name="text_advanced">Advanced</string>
    <string name="text_allowToConnect">Allow to connect</string>
    <string name="text_application">App</string>
    <string name="text_autoStart">Auto-Start</string>
    <string name="text_autoStartSummary">Enable communication when a connection is detected</string>
    <string name="text_developmentSurvey">Survey &amp; FeedBack</string>
    <string name="text_deviceModelInfo">Device name</string>
    <string name="text_deviceName">Device name</string>
    <string name="text_deviceNameSummary">This name will be shown on other devices</string>
    <string name="text_deviceNameTitle">Enter a device name</string>
    <string name="text_empty">(empty)</string>
    <string name="text_fileMime">File type</string>
    <string name="text_fileName">File name</string>
    <string name="text_fileSize">File size</string>
    <string name="text_fileStatus">File status</string>
    <string name="text_hotspotStartsTrustZone">Hotspot also turns RelianceZone on</string>
    <string name="text_hotspotStartsTrustZoneSummary">RelianceZone will also be started accordingly</string>
    <string name="text_killServiceAfterLeaving">Leaving the app stops the service</string>
    <string name="text_killServiceAfterLeavingSummary">Stops communication if there is no ongoing task</string>
    <string name="text_loadThumbnails">Load thumbnails</string>
    <string name="text_loadThumbnailsSummary">Show thumbnails for files</string>
    <string name="text_location">Location</string>
    <string name="text_manageDevices">Manage devices</string>
    <string name="text_networkServiceDiscovery">Enable NSD</string>
    <string name="text_networkServiceDiscoverySummary">Network Service Discovery improves discoverability</string>
    <string name="text_notification">Notification</string>
    <string name="text_notificationSettings">Notification settings</string>
    <string name="text_notificationSettingsSummary">Open notification settings</string>
    <string name="text_preferences">Preferences</string>
    <string name="text_qrAllowTrustZone">RelianceZone for QR code</string>
    <string name="text_qrAllowTrustZoneSummary">Allow RelianceZone for QR code connections</string>
    <string name="text_receivedSize">Received size</string>
    <string name="text_scanQRCodeHelp">Scan the QR code on the screen of the host device</string>
    <string name="text_showSystemApps">Show system apps</string>
    <string name="text_showSystemAppsSummary">Show system apps in \"Send\" section</string>
    <string name="text_storagePath">Storage path</string>
    <string name="text_storagePathSummary">New files will be saved the selected folder</string>
    <string name="text_trustZoneEnabled">RelianceZone</string>
    <string name="text_trustZoneEnabledSummary">RelianceZone is activated on start</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_useLightSummary">Use lights</string>
    <string name="text_useLights">Lights</string>
    <string name="text_useSounds">Sounds</string>
    <string name="text_useSoundsSummary">Use sounds</string>
    <string name="text_useVibration">Vibration and heads-up notifications</string>
    <string name="text_useVibrationSummary">Use vibration and show heads-up notifications</string>
    <string name="text_version">Version</string>
    <string name="text_versionNotSupported">@string/mesg_versionNotSupported</string>
</resources>