<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:id="@+id/actions_transfer_toggle" android:visible="false" android:title="@string/butn_receive" app:showAsAction="always"/>
    <item android:id="@+id/actions_transfer_sender_add_device" android:visible="false" android:title="@string/butn_addDevices"/>
    <item android:id="@+id/actions_transfer_test_connection" android:visible="false" android:title="@string/butn_connectionTest"/>
    <item android:id="@+id/actions_transfer_receiver_show_files" android:visible="false" android:title="@string/butn_showFiles"/>
    <item android:id="@+id/actions_transfer_receiver_retry_receiving" android:visible="false" android:title="@string/butn_retryReceiving"/>
    <item android:id="@+id/actions_transfer_web_share_shortcut" android:visible="false" android:title="@string/butn_webShare"/>
    <item android:id="@+id/actions_transfer_toggle_browser_share" android:visible="false" android:title="@string/butn_shareOnBrowser"/>
    <item android:id="@+id/actions_transfer_remove" android:visible="true" android:title="@string/butn_remove"/>
    <item android:id="@+id/actions_transfer_settings" android:visible="false" android:orderInCategory="110" android:title="@string/butn_settings">
        <menu/>
    </item>
</menu>
