<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/sendicon" android:id="@+id/menu_action_share_trebleshot" android:title="@string/butn_shareWithTrebleshot" app:showAsAction="always"/>
    <item android:icon="@drawable/checkicon" android:id="@+id/menu_action_done" android:title="@string/butn_done" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_save_white_24dp" android:id="@+id/menu_action_save" android:title="@string/butn_save"/>
    <item android:icon="@drawable/ic_content_copy_white_24dp" android:id="@+id/menu_action_copy" android:title="@string/butn_copyToClipboard"/>
    <item android:icon="@drawable/ic_share_white_24dp" android:id="@+id/menu_action_share" android:title="@string/butn_shareWithOtherApps"/>
    <item android:icon="@drawable/ic_qrcode_white_24dp" android:id="@+id/menu_action_show_as_qr_code" android:title="@string/butn_showAsQrCode"/>
    <item android:icon="@drawable/ic_delete_white_24dp" android:id="@+id/menu_action_remove" android:title="@string/butn_remove"/>
</menu>
