<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/app_background" android:layout_width="match_parent" android:layout_height="match_parent" android:minWidth="300dp">
    <LinearLayout android:orientation="vertical" android:paddingLeft="24dp" android:paddingTop="30dp" android:paddingRight="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_horizontal" android:id="@+id/image" android:layout_width="@dimen/icon_size_list_giant" android:layout_height="@dimen/icon_size_list_giant" android:layout_marginBottom="15dp"/>
        <TextView android:textColor="#ffffff" android:layout_gravity="center_horizontal" android:id="@+id/text1" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/text_unknown" style="@style/TextAppearance.Primary.Big.SingleLine"/>
        <TextView android:id="@+id/notSupportedText" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/text_versionNotSupported" android:maxLines="5" style="@style/TextAppearance.Secondary"/>
        <TextView android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_deviceModelInfo" style="@style/TextAppearance.Primary.SingleLine"/>
        <TextView android:id="@+id/modelText" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextAppearance.Secondary.SingleLine"/>
        <View android:layout_width="match_parent" android:layout_height="15dp"/>
        <TextView android:textColor="#ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_version" style="@style/TextAppearance.Primary.SingleLine"/>
        <TextView android:id="@+id/versionText" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/TextAppearance.Secondary.SingleLine"/>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/accessSwitch" android:paddingTop="15dp" android:paddingBottom="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/text_allowToConnect" style="@style/TextAppearance.Primary"/>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/trustSwitch" android:paddingTop="15dp" android:paddingBottom="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/butn_trustZoneDevice" style="@style/TextAppearance.Primary"/>
    </LinearLayout>
</ScrollView>
